Fixing issue where certain modals could not be scrolled on mobile

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -2071,7 +2071,19 @@ header .navbar .navbar-collapse ul.nav li a.feedback
     a
       text-decoration: none
 
+  .modal
+    height: 100%
+    position: fixed
+    overflow-y: scroll
+    -webkit-overflow-scrolling: touch
 
+  .modal.fade.in
+    // top: 5px
+
+  .modal-body
+    max-height: 2400px
+
+    
 
 /* SCREEN SIZE: TABLETS */
 
